# internal/user/model/request_model.go
@@ -5,3 +5,9 @@ type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required"`
 }
+
+type SignupRequest struct {
+	Name     string `json:"name" binding:"omitempty"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
