# internal/user/routes.go
@@ -10,4 +10,5 @@ import (
 func RegisterRoutes(v1 *gin.RouterGroup, h *handler.UserHandler) {
 	users := v1.Group("/users")
 	users.POST("/login", h.Login)
+	users.POST("/signup", h.Signup)
 }
